dark mode fixed

--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -220,6 +220,7 @@ body.dark .about-title{
 }
 body.dark .about-title-des{
   color: #a1a1aa !important;
+  background-color: #18181b !important;
 }
 
 body.dark .panel{
